Edited width of carousel

--- a/main.css
+++ b/main.css
@@ -222,6 +222,7 @@ ul.navbar-nav {
     background-color: black;
     background-size: cover;
     height: calc(100vh);
+    width: calc(100vw);
     overflow: hidden;
 }
 
